# physics-581-physics-inspired-computation

./: .coveragerc  .gitignore  .gitlab-ci.yml  .init-file.bash  .readthedocs.yaml  GettingStarted.md  Makefile  Notes.md  README.md  Resources  anaconda-project.yaml  anaconda-project.yml  pyproject.toml
Docs/: Assignments.md  ClassLog.md  CoCalc.md  CourseInfo.md  GettingStarted.md  Links.md  Notes.md  Prerequisites.md  Projects.md  Reading.md  References.md  Syllabus.md  Syllabus_Assignments.md  Syllabus_Prerequisites.md  conf.py  index.md  index.rst  local.bib  macros.bib
Docs/Assignments/: Assignment-0.md  Assignment-1.md  Assignment-2.md  Assignment-4.md  Assignment-5.md
Docs/Notes/: GaussianProcesses.md  GaussianProcessesTheory.md  GloballyConvergentNewton.md  ModelFitting.md  ModelFittingDetails.md  ModelFittingExample1.md  ModelFittingExample1a.md  ModelFittingExample1b.md  RandomVariables.md
Docs/Tips/: Plotting.md
Docs/Topics/PDEs/: TuringI.md
Docs/_static/: math_defs.tex
Docs/_templates/: layout.html
Docs/_templates/autosummary/: class.rst
Docs/api/: index.rst
Topics/Cycles/: Problems.ipynb  data
Topics/WIP/: BayesianAnalysis.py  MCMC.py  ParametricResonance.py
Topics/WIP/PeriodicSignals/: PeriodicData.py  PeriodicSignals.py
phys_581_2021/: __init__.py  _static  assignment_0.py  assignment_1.py  assignment_2.py  assignment_4.py  plotting.py
tests/: conftest.py  test_assignment_1.py  test_assignment_2.py  test_assignment_4.py  test_official_assignment_1.py  test_official_assignment_2.py  test_official_assignment_4.py
tests/assignment0/: test_1.py  test_official_assignment0.py
tests/assignment_0/: test_1.py  test_official_assignment_0.py
tests/assignment_1/: test_official_assignment_1.py
