[tool.poetry]
name = "phys_581_2021"
version = "0.1.0"
description = "Physics 581: Physics Inspired Computational Techniques."
authors = ["Michael McNeil Forbes <m.forbes+phys_581_2021@wsu.edu>"]
license = "BSD-3"
readme = "README.rst"
repository = "https://gitlab.com/wsu-courses/physics-581-physics-inspired-computation"
documentation = "https://phys_581_2021.readthedocs.org"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]



[tool.poetry.dependencies]
# Problem with pyfftw and python 3.9
# https://github.com/pyFFTW/pyFFTW/issues/252
python = ">=3.9,<3.10"
scipy = "^1.7.1"
matplotlib = "^3.4.3"
pandas = "^1.3.2"
mmf-setup = "^0.3.1"

#"zope.interface" = "^5.4.0"
#husl = "^4.0.3"

# Optional dependencies for testing, building the docs, etc.
Sphinx = {version = ">=2,<4", optional = true}
#ipyparallel = {version = "^6.3.0", optional = true}
#mmf-setup = {version = "^0.3.1", optional = true}
#mock = {version = "^4.0.3", optional = true}
#nbconvert = {version = "^6.0.7", optional = true}
#numba = {version = "^0.53.1", optional = true}
#numexpr = {version = "^2.7.3", optional = true}
#persist = {version = "^3.0", optional = true}
#psutil = {version = "^5.8.0", optional = true}
#pyFFTW = {version = "^0.12.0", optional = true}
pytest = {version = "^6.2.3", optional = true}
pytest-cov = {version = "^2.11.1", optional = true}
sphinx-panels = {version = "^0.6.0", optional = true}
sphinx-book-theme = {version = "^0.1.2", optional = true}
sphinxcontrib-zopeext = {version = "^0.2.4", optional = true}
sphinxcontrib-bibtex = {version = "^2.3.0", optional = true}
myst-nb = {version = "^0.12.3", optional = true}
#uncertainties = {version = "^3.1.5", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.4b2"
mercurial = { version = "^5.7.1", optional = true }
hg-git = { version = "^0.10.0", optional = true }
hg-evolve = { version = "^10.3.1", optional = true }

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-html",
    "pytest-xdist",
    "ipyparallel",
    "persist",
    "scipy",
    "matplotlib",
    "numexpr",
    "uncertainties",
    "pyfftw",
    "numba",
    "docutils",
    "psutil",
]

doc = [
    "Sphinx",
    "mock",
    "sphinx_rtd_theme",
    "sphinxcontrib.zopeext",
    "numpy",
    "matplotlib",
    "mmf_setup",
    "nbconvert",
]

[tool.poetry.urls]
"Issues" = "https://alum.mit.edu/www/mforbes/hg/forbes-group/mmfutils/issues"
"Git Mirror" = "https://github.com/forbes-group/mmfutils"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

######################################################################
# PyTest
[tool.pytest.ini_options]
testpaths = [
    "phys_581_2021",
    "tests",
]
markers = [
    # mark test as a benchmark.  (Might be slow, or platform dependent)
    "bench",
    # mark test as slow.
    "slow",
]
addopts = [
    "-m not bench",
    "-k not test_official_assignment",
    "--doctest-modules",
    "--cov",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--no-cov-on-fail",
    "--html=_artifacts/pytest_report.html",
    "--junitxml=_artifacts/junit.xml",
    #"-x",
    #"--pdb",
    #"--flake8",  # Disable until https://github.com/tholo/pytest-flake8/issues/8
]

doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE"
    ]

######################################################################
# Black
[tool.black]
exclude = '''
    /(
        \.git
      | \.hg
      | \.nox
      | \.venv
      | _build
      | build
      | dist
    )/
'''